--- a/Instagram/Base.lproj/Main.storyboard
+++ b/Instagram/Base.lproj/Main.storyboard
@@ -180,51 +180,50 @@
         <!--Comment View Controller-->
         <scene sceneID="Ui2-yN-REs">
             <objects>
-                <viewController id="Cos-Ng-Abs" customClass="CommentViewController" customModule="Instagram" customModuleProvider="target" sceneMemberID="viewController">
+                <viewController storyboardIdentifier="Comment" id="Cos-Ng-Abs" customClass="CommentViewController" customModule="Instagram" customModuleProvider="target" sceneMemberID="viewController">
                     <view key="view" contentMode="scaleToFill" id="ILU-X0-WzU">
                         <rect key="frame" x="0.0" y="0.0" width="414" height="896"/>
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                         <subviews>
                             <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="3HK-b2-oDh">
-                                <rect key="frame" x="10" y="244" width="394" height="40"/>
+                                <rect key="frame" x="10" y="254" width="394" height="40"/>
                                 <state key="normal" title="投稿" backgroundImage="btn"/>
                                 <connections>
                                     <action selector="handlePostButton:" destination="Cos-Ng-Abs" eventType="touchUpInside" id="E2b-SK-gcN"/>
                                 </connections>
                             </button>
                             <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="rwJ-FY-Cc8">
-                                <rect key="frame" x="10" y="294" width="394" height="40"/>
+                                <rect key="frame" x="10" y="304" width="394" height="40"/>
                                 <state key="normal" title="キャンセル" backgroundImage="btn"/>
                                 <connections>
                                     <action selector="handleCancelButton:" destination="Cos-Ng-Abs" eventType="touchUpInside" id="46L-8c-AP1"/>
                                 </connections>
                             </button>
-                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Label" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="q0z-dc-Apf">
+                            <textField opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="left" contentVerticalAlignment="center" borderStyle="roundedRect" placeholder="コメント" textAlignment="natural" minimumFontSize="17" translatesAutoresizingMaskIntoConstraints="NO" id="MSN-i7-ZZY">
                                 <rect key="frame" x="10" y="74" width="394" height="160"/>
                                 <constraints>
-                                    <constraint firstAttribute="height" constant="160" id="eYJ-7M-JbQ"/>
+                                    <constraint firstAttribute="height" constant="160" id="l5i-p2-wRg"/>
                                 </constraints>
-                                <fontDescription key="fontDescription" type="system" pointSize="17"/>
-                                <nil key="textColor"/>
-                                <nil key="highlightedColor"/>
-                            </label>
+                                <fontDescription key="fontDescription" type="system" pointSize="14"/>
+                                <textInputTraits key="textInputTraits"/>
+                            </textField>
                         </subviews>
                         <viewLayoutGuide key="safeArea" id="HqD-X4-eFU"/>
                         <color key="backgroundColor" systemColor="systemBackgroundColor"/>
                         <constraints>
-                            <constraint firstItem="HqD-X4-eFU" firstAttribute="trailing" secondItem="q0z-dc-Apf" secondAttribute="trailing" constant="10" id="0Bf-hb-ZNY"/>
                             <constraint firstItem="rwJ-FY-Cc8" firstAttribute="top" secondItem="3HK-b2-oDh" secondAttribute="bottom" constant="10" id="68a-ZR-1dq"/>
-                            <constraint firstItem="q0z-dc-Apf" firstAttribute="top" secondItem="HqD-X4-eFU" secondAttribute="top" constant="30" id="9Ti-83-YXa"/>
+                            <constraint firstItem="3HK-b2-oDh" firstAttribute="top" secondItem="MSN-i7-ZZY" secondAttribute="bottom" constant="20" id="9rZ-ck-R34"/>
                             <constraint firstItem="rwJ-FY-Cc8" firstAttribute="leading" secondItem="HqD-X4-eFU" secondAttribute="leading" constant="10" id="BNc-mb-Qhv"/>
                             <constraint firstItem="HqD-X4-eFU" firstAttribute="trailing" secondItem="3HK-b2-oDh" secondAttribute="trailing" constant="10" id="JLA-UQ-scM"/>
-                            <constraint firstItem="q0z-dc-Apf" firstAttribute="leading" secondItem="HqD-X4-eFU" secondAttribute="leading" constant="10" id="dJz-Sw-zjz"/>
+                            <constraint firstItem="HqD-X4-eFU" firstAttribute="trailing" secondItem="MSN-i7-ZZY" secondAttribute="trailing" constant="10" id="UbP-8q-9rf"/>
+                            <constraint firstItem="MSN-i7-ZZY" firstAttribute="leading" secondItem="HqD-X4-eFU" secondAttribute="leading" constant="10" id="Vfk-HC-fge"/>
                             <constraint firstItem="HqD-X4-eFU" firstAttribute="trailing" secondItem="rwJ-FY-Cc8" secondAttribute="trailing" constant="10" id="hUH-8A-UJe"/>
                             <constraint firstItem="3HK-b2-oDh" firstAttribute="leading" secondItem="HqD-X4-eFU" secondAttribute="leading" constant="10" id="pbJ-6V-puT"/>
-                            <constraint firstItem="3HK-b2-oDh" firstAttribute="top" secondItem="q0z-dc-Apf" secondAttribute="bottom" constant="10" id="s3Z-JV-g52"/>
+                            <constraint firstItem="MSN-i7-ZZY" firstAttribute="top" secondItem="HqD-X4-eFU" secondAttribute="top" constant="30" id="s8I-XI-Y9m"/>
                         </constraints>
                     </view>
                     <connections>
-                        <outlet property="textView" destination="q0z-dc-Apf" id="Rh7-ki-DAA"/>
+                        <outlet property="textView" destination="MSN-i7-ZZY" id="pmX-pn-Myw"/>
                     </connections>
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="jVZ-rr-eAm" userLabel="First Responder" customClass="UIResponder" sceneMemberID="firstResponder"/>
