--- a/Instagram/PostTableViewCell.xib
+++ b/Instagram/PostTableViewCell.xib
@@ -9,11 +9,11 @@
     <objects>
         <placeholder placeholderIdentifier="IBFilesOwner" id="-1" userLabel="File's Owner"/>
         <placeholder placeholderIdentifier="IBFirstResponder" id="-2" customClass="UIResponder"/>
-        <tableViewCell contentMode="scaleToFill" selectionStyle="default" indentationWidth="10" rowHeight="494" id="KGk-i7-Jjw" customClass="PostTableViewCell" customModule="Instagram" customModuleProvider="target">
-            <rect key="frame" x="0.0" y="0.0" width="320" height="494"/>
+        <tableViewCell contentMode="scaleToFill" selectionStyle="default" indentationWidth="10" rowHeight="510" id="KGk-i7-Jjw" customClass="PostTableViewCell" customModule="Instagram" customModuleProvider="target">
+            <rect key="frame" x="0.0" y="0.0" width="320" height="510"/>
             <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
             <tableViewCellContentView key="contentView" opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" tableViewCell="KGk-i7-Jjw" id="H2p-sc-9uM">
-                <rect key="frame" x="0.0" y="0.0" width="320" height="494"/>
+                <rect key="frame" x="0.0" y="0.0" width="320" height="510"/>
                 <autoresizingMask key="autoresizingMask"/>
                 <subviews>
                     <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="ZB7-Jy-ImH">
@@ -39,11 +39,8 @@
                         <nil key="textColor"/>
                         <nil key="highlightedColor"/>
                     </label>
-                    <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Label" textAlignment="natural" lineBreakMode="tailTruncation" numberOfLines="0" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="bXY-ZO-dF2">
-                        <rect key="frame" x="26" y="369" width="268" height="54"/>
-                        <constraints>
-                            <constraint firstAttribute="height" relation="greaterThanOrEqual" constant="40" id="C0u-QW-eKO"/>
-                        </constraints>
+                    <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" text="Label" textAlignment="natural" lineBreakMode="tailTruncation" numberOfLines="0" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="bXY-ZO-dF2">
+                        <rect key="frame" x="26" y="369" width="268" height="69.5"/>
                         <fontDescription key="fontDescription" type="system" pointSize="17"/>
                         <nil key="textColor"/>
                         <nil key="highlightedColor"/>
@@ -62,11 +59,8 @@
                         </constraints>
                         <state key="normal" image="message" catalog="system"/>
                     </button>
-                    <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Label" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="o14-XK-R8O">
-                        <rect key="frame" x="26" y="443" width="268" height="30"/>
-                        <constraints>
-                            <constraint firstAttribute="height" constant="30" id="PRU-Rl-wwt"/>
-                        </constraints>
+                    <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Label" textAlignment="natural" lineBreakMode="tailTruncation" numberOfLines="0" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="o14-XK-R8O">
+                        <rect key="frame" x="26" y="458.5" width="268" height="20.5"/>
                         <fontDescription key="fontDescription" type="system" pointSize="17"/>
                         <nil key="textColor"/>
                         <nil key="highlightedColor"/>
@@ -89,7 +83,7 @@
                     <constraint firstItem="o14-XK-R8O" firstAttribute="top" secondItem="bXY-ZO-dF2" secondAttribute="bottom" constant="20" id="qni-4F-2a3"/>
                     <constraint firstItem="o14-XK-R8O" firstAttribute="leading" secondItem="H2p-sc-9uM" secondAttribute="leadingMargin" constant="10" id="sC9-G2-oNB"/>
                     <constraint firstItem="UnD-0h-BEg" firstAttribute="leading" secondItem="X26-Dn-w8i" secondAttribute="trailing" constant="10" id="wQ9-Xe-JrG"/>
-                    <constraint firstAttribute="bottomMargin" secondItem="o14-XK-R8O" secondAttribute="bottom" constant="10" id="wjN-tf-UOQ"/>
+                    <constraint firstAttribute="bottomMargin" secondItem="o14-XK-R8O" secondAttribute="bottom" constant="20" id="wjN-tf-UOQ"/>
                     <constraint firstItem="Epj-DX-u49" firstAttribute="leading" secondItem="UnD-0h-BEg" secondAttribute="trailing" constant="10" id="wkk-Zt-Uw1"/>
                     <constraint firstItem="KdN-wf-Ym1" firstAttribute="top" secondItem="H2p-sc-9uM" secondAttribute="topMargin" constant="10" id="yg0-Vy-bOl"/>
                 </constraints>
@@ -104,7 +98,7 @@
                 <outlet property="likeLabel" destination="X26-Dn-w8i" id="rO0-l2-kvI"/>
                 <outlet property="postImageView" destination="KdN-wf-Ym1" id="x81-Nn-hhC"/>
             </connections>
-            <point key="canvasLocation" x="131.8840579710145" y="178.79464285714286"/>
+            <point key="canvasLocation" x="131.8840579710145" y="184.15178571428569"/>
         </tableViewCell>
     </objects>
     <resources>
